# Unistroke-Recognition-using-Time-Of-Flight-Camera

./: CMakeLists.txt  README.md  README.txt
Header/: Classification.h  DirAccess.h  ImageProcessing.h  SampleGestures.h
Source/: Classification.cpp  DirAccess.cpp  GeometricRecognizer.cpp  ImageProcessing.cpp  MultiStrokeRec.cpp
